additional minor tweak to overlapping fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2640,7 +2640,7 @@ div#skills.inner::after {
     display: none;
   }
   section#header header{
-    padding-bottom: 20px;
+    padding-bottom: 50px;
   }
 }
 
